k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: fastapi
spec:
  selector:
    app: fastapi-app
  ports:
    - port: 80
      targetPort: 8000
